Service bulk creation.

--- a/test-output/old/mWallet Suite/classes.html
+++ b/test-output/old/mWallet Suite/classes.html
@@ -4,30 +4,15 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>Tests.Smoke.EmoneyManagement.TestAdminReverse</td>
+<td>Tests.Smoke.Services.TestServiceBulkCreation</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifySuccessfulConfirmationOfAdminReverse</td>
-<td>AdminReverse </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifySuccessfulRejectionOfAdminReverse</td>
-<td>AdminReverse </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyThatConfirmedAdminReverseCantBeReversedAgain</td>
-<td>AdminReverse </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyThatRejectedReverseCanBeReversedAndConfirmedAgain</td>
-<td>AdminReverse </td>
+<td>verifyCreationOfP2PPrepaidService</td>
+<td>Service </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -64,97 +49,8 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyAbilityToREEditAllAccountDetails</td>
-<td>MyProfile </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
 <td>verifyThatPasswordIsNotChangedIfNewPasswordIsAsPreviousOne</td>
 <td>MyProfile </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyAbilityToEditAllAccountDetails</td>
-<td>MyProfile </td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>Tests.Smoke.EmoneyManagement.TestManualRetirement</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifySuccessfullCreationOfRetirementWithExactAmount</td>
-<td>ManageRetirement </td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>Tests.Smoke.EmoneyManagement.TestAdminTransfer</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyThatSourceAndDestinationCannotBeEqual</td>
-<td>AdminTransfer </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyThatAdminTransferCanBeApproved</td>
-<td>AdminTransfer </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyThatBothSourceAndDestinationCannotBeMerchant</td>
-<td>AdminTransfer </td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>Tests.Smoke.Merchants.TestMerchantCreation</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>merchantCreation</td>
-<td>Merchants </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
