--- a/test-output/old/Default Suite/groups.html
+++ b/test-output/old/Default Suite/groups.html
@@ -1,3 +1,1 @@
-<h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>MyProfile</td><td>TestMyProfile.verifyLogIn()[pri:0, instance:Tests.Smoke.Myprofilehelp.TestMyProfile@3c153a1]<br/></td></tr>
-</table>
+<h2>Groups used for this test run</h2>
