--- a/test-output/old/Default Suite/methods-alphabetical.html
+++ b/test-output/old/Default Suite/methods-alphabetical.html
@@ -1,12 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6f8775">  <td>18/10/02 15:14:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrowserSettings.getReport(org.testng.ITestResult)[pri:0, instance:Tests.Smoke.Myprofilehelp.TestMyProfile@3c153a1]">&lt;&lt;getReport</td> 
-<td>&nbsp;</td>  <td>main@688726285</td>   <td></td> </tr>
-<tr bgcolor="6f8775">  <td>18/10/02 15:14:18</td>   <td>-22168</td> <td title="&gt;&gt;BrowserSettings.setBrowser(java.lang.String)[pri:0, instance:Tests.Smoke.Myprofilehelp.TestMyProfile@3c153a1]">&gt;&gt;setBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@688726285</td>   <td></td> </tr>
-<tr bgcolor="6f8775">  <td>18/10/02 15:14:23</td>   <td>-17767</td> <td>&nbsp;</td><td title="&gt;&gt;BrowserSettings.startTest()[pri:0, instance:Tests.Smoke.Myprofilehelp.TestMyProfile@3c153a1]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@688726285</td>   <td></td> </tr>
-<tr bgcolor="aaa2f2">  <td>18/10/02 15:14:23</td>   <td>-17386</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestMyProfile.verifyLogIn()[pri:0, instance:Tests.Smoke.Myprofilehelp.TestMyProfile@3c153a1]">verifyLogIn</td> 
-  <td>main@688726285</td>   <td></td> </tr>
+<tr bgcolor="6f7171">  <td>18/10/04 11:30:27</td>   <td>0</td> <td title="&gt;&gt;BrowserSettings.startTest(java.lang.String)[pri:0, instance:BrowserSettings.BrowserSettings@35ef1869]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@350068407</td>   <td></td> </tr>
+<tr bgcolor="6f7171">  <td>18/10/04 11:30:30</td>   <td>2710</td> <td title="&lt;&lt;BrowserSettings.tearDown()[pri:0, instance:BrowserSettings.BrowserSettings@35ef1869]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@350068407</td>   <td></td> </tr>
 </table>
