--- a/test-output/old/mWallet Suite/methods-alphabetical.html
+++ b/test-output/old/mWallet Suite/methods-alphabetical.html
@@ -1,30 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>mWallet Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="968ab9">  <td>18/10/03 14:15:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestMerchantCreation.merchantCreation()[pri:0, instance:Tests.Smoke.Merchants.TestMerchantCreation@6c3708b3]">merchantCreation</td> 
-  <td>main@1663166483</td>   <td></td> </tr>
-<tr bgcolor="8067a5">  <td>18/10/03 14:15:33</td>   <td>-16759</td> <td title="&gt;&gt;BrowserSettings.startTest(java.lang.String)[pri:0, instance:Tests.Smoke.Myprofilehelp.TestMyProfile@3e9b1010]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1663166483</td>   <td></td> </tr>
-<tr bgcolor="8e73b0">  <td>18/10/03 14:15:44</td>   <td>-5268</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestMyProfile.verifyAbilityToEditAllAccountDetails()[pri:0, instance:Tests.Smoke.Myprofilehelp.TestMyProfile@3e9b1010]">verifyAbilityToEditAllAccountDetails</td> 
-  <td>main@1663166483</td>   <td></td> </tr>
-<tr bgcolor="8e73b0">  <td>18/10/03 14:15:48</td>   <td>-1175</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestMyProfile.verifyAbilityToREEditAllAccountDetails()[pri:0, instance:Tests.Smoke.Myprofilehelp.TestMyProfile@3e9b1010]">verifyAbilityToREEditAllAccountDetails</td> 
-  <td>main@1663166483</td>   <td></td> </tr>
-<tr bgcolor="8e73b0">  <td>18/10/03 14:15:37</td>   <td>-12338</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestMyProfile.verifyLogIn()[pri:0, instance:Tests.Smoke.Myprofilehelp.TestMyProfile@3e9b1010]">verifyLogIn</td> 
-  <td>main@1663166483</td>   <td></td> </tr>
-<tr bgcolor="7cd7a0">  <td>18/10/03 14:17:15</td>   <td>85676</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAdminReverse.verifySuccessfulConfirmationOfAdminReverse()[pri:0, instance:Tests.Smoke.EmoneyManagement.TestAdminReverse@185d8b6]">verifySuccessfulConfirmationOfAdminReverse</td> 
-  <td>main@1663166483</td>   <td></td> </tr>
-<tr bgcolor="7cd7a0">  <td>18/10/03 14:17:21</td>   <td>91334</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAdminReverse.verifySuccessfulRejectionOfAdminReverse()[pri:0, instance:Tests.Smoke.EmoneyManagement.TestAdminReverse@185d8b6]">verifySuccessfulRejectionOfAdminReverse</td> 
-  <td>main@1663166483</td>   <td></td> </tr>
-<tr bgcolor="af90ec">  <td>18/10/03 14:17:29</td>   <td>99683</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestManualRetirement.verifySuccessfullCreationOfRetirementWithExactAmount()[pri:0, instance:Tests.Smoke.EmoneyManagement.TestManualRetirement@67784306]">verifySuccessfullCreationOfRetirementWithExactAmount</td> 
-  <td>main@1663166483</td>   <td></td> </tr>
-<tr bgcolor="67aeb6">  <td>18/10/03 14:17:10</td>   <td>80502</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAdminTransfer.verifyThatAdminTransferCanBeApproved()[pri:0, instance:Tests.Smoke.EmoneyManagement.TestAdminTransfer@6f1fba17]">verifyThatAdminTransferCanBeApproved</td> 
-  <td>main@1663166483</td>   <td></td> </tr>
-<tr bgcolor="67aeb6">  <td>18/10/03 14:17:08</td>   <td>78558</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAdminTransfer.verifyThatBothSourceAndDestinationCannotBeMerchant()[pri:0, instance:Tests.Smoke.EmoneyManagement.TestAdminTransfer@6f1fba17]">verifyThatBothSourceAndDestinationCannotBeMerchant</td> 
-  <td>main@1663166483</td>   <td></td> </tr>
-<tr bgcolor="7cd7a0">  <td>18/10/03 14:17:20</td>   <td>90181</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAdminReverse.verifyThatConfirmedAdminReverseCantBeReversedAgain()[pri:0, instance:Tests.Smoke.EmoneyManagement.TestAdminReverse@185d8b6]">verifyThatConfirmedAdminReverseCantBeReversedAgain</td> 
-  <td>main@1663166483</td>   <td></td> </tr>
-<tr bgcolor="7cd7a0">  <td>18/10/03 14:17:25</td>   <td>95358</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAdminReverse.verifyThatRejectedReverseCanBeReversedAndConfirmedAgain()[pri:0, instance:Tests.Smoke.EmoneyManagement.TestAdminReverse@185d8b6]">verifyThatRejectedReverseCanBeReversedAndConfirmedAgain</td> 
-  <td>main@1663166483</td>   <td></td> </tr>
-<tr bgcolor="67aeb6">  <td>18/10/03 14:17:09</td>   <td>79869</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAdminTransfer.verifyThatSourceAndDestinationCannotBeEqual()[pri:0, instance:Tests.Smoke.EmoneyManagement.TestAdminTransfer@6f1fba17]">verifyThatSourceAndDestinationCannotBeEqual</td> 
-  <td>main@1663166483</td>   <td></td> </tr>
+<tr bgcolor="bbfa64">  <td>18/10/04 17:53:36</td>   <td>0</td> <td title="&gt;&gt;BrowserSettings.startTest(java.lang.String)[pri:0, instance:Tests.Smoke.Myprofilehelp.TestMyProfile@6d7b4f4c]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@601893033</td>   <td></td> </tr>
+<tr bgcolor="968ab9">  <td>18/10/04 17:53:52</td>   <td>15556</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestServiceBulkCreation.verifyCreationOfP2PPrepaidService()[pri:0, instance:Tests.Smoke.Services.TestServiceBulkCreation@527740a2]">verifyCreationOfP2PPrepaidService</td> 
+  <td>TestNG-tests-1@253482108</td>   <td></td> </tr>
+<tr bgcolor="8e73b0">  <td>18/10/04 17:53:40</td>   <td>4262</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestMyProfile.verifyLogIn()[pri:0, instance:Tests.Smoke.Myprofilehelp.TestMyProfile@6d7b4f4c]">verifyLogIn</td> 
+  <td>TestNG-tests-1@253482108</td>   <td></td> </tr>
 </table>
