--- a/test-output/old/mWallet Suite/classes.html
+++ b/test-output/old/mWallet Suite/classes.html
@@ -4,6 +4,44 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
+<td>Tests.Smoke.EmoneyManagement.TestAdminReverse</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifySuccessfulConfirmationOfAdminReverse</td>
+<td>AdminReverse </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifySuccessfulRejectionOfAdminReverse</td>
+<td>AdminReverse </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyThatConfirmedAdminReverseCantBeReversedAgain</td>
+<td>AdminReverse </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyThatRejectedReverseCanBeReversedAndConfirmedAgain</td>
+<td>AdminReverse </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
 <td>Tests.Smoke.Services.TestServiceBulkCreation</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -51,6 +89,39 @@
 <td>&nbsp;</td>
 <td>verifyThatPasswordIsNotChangedIfNewPasswordIsAsPreviousOne</td>
 <td>MyProfile </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>Tests.Smoke.EmoneyManagement.TestAdminTransfer</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyThatSourceAndDestinationCannotBeEqual</td>
+<td>AdminTransfer </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyThatAdminTransferCanBeApproved</td>
+<td>AdminTransfer </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyThatBothSourceAndDestinationCannotBeMerchant</td>
+<td>AdminTransfer </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
