--- a/test-output/old/mWallet Suite/methods.html
+++ b/test-output/old/mWallet Suite/methods.html
@@ -1,10 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>mWallet Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bbfa64">  <td>18/10/04 17:53:36</td>   <td>0</td> <td title="&gt;&gt;BrowserSettings.startTest(java.lang.String)[pri:0, instance:Tests.Smoke.Myprofilehelp.TestMyProfile@6d7b4f4c]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@601893033</td>   <td></td> </tr>
-<tr bgcolor="8e73b0">  <td>18/10/04 17:53:40</td>   <td>4262</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestMyProfile.verifyLogIn()[pri:0, instance:Tests.Smoke.Myprofilehelp.TestMyProfile@6d7b4f4c]">verifyLogIn</td> 
-  <td>TestNG-tests-1@253482108</td>   <td></td> </tr>
-<tr bgcolor="968ab9">  <td>18/10/04 17:53:52</td>   <td>15556</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestServiceBulkCreation.verifyCreationOfP2PPrepaidService()[pri:0, instance:Tests.Smoke.Services.TestServiceBulkCreation@527740a2]">verifyCreationOfP2PPrepaidService</td> 
-  <td>TestNG-tests-1@253482108</td>   <td></td> </tr>
+<tr bgcolor="efa5e3">  <td>18/10/05 12:15:20</td>   <td>0</td> <td title="&gt;&gt;BrowserSettings.startTest(java.lang.String)[pri:0, instance:Tests.Smoke.Myprofilehelp.TestMyProfile@6536e911]">&gt;&gt;startTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1354011814</td>   <td></td> </tr>
+<tr bgcolor="8e73b0">  <td>18/10/05 12:15:24</td>   <td>4234</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestMyProfile.verifyLogIn()[pri:0, instance:Tests.Smoke.Myprofilehelp.TestMyProfile@6536e911]">verifyLogIn</td> 
+  <td>TestNG-tests-1@1040502320</td>   <td></td> </tr>
+<tr bgcolor="67aeb6">  <td>18/10/05 12:15:49</td>   <td>29278</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAdminReverse.verifySuccessfulConfirmationOfAdminReverse()[pri:0, instance:Tests.Smoke.EmoneyManagement.TestAdminReverse@18eed359]">verifySuccessfulConfirmationOfAdminReverse</td> 
+  <td>TestNG-tests-1@1040502320</td>   <td></td> </tr>
+<tr bgcolor="67aeb6">  <td>18/10/05 12:16:09</td>   <td>48645</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAdminReverse.verifyThatConfirmedAdminReverseCantBeReversedAgain()[pri:0, instance:Tests.Smoke.EmoneyManagement.TestAdminReverse@18eed359]">verifyThatConfirmedAdminReverseCantBeReversedAgain</td> 
+  <td>TestNG-tests-1@1040502320</td>   <td></td> </tr>
+<tr bgcolor="67aeb6">  <td>18/10/05 12:16:16</td>   <td>56167</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAdminReverse.verifySuccessfulRejectionOfAdminReverse()[pri:0, instance:Tests.Smoke.EmoneyManagement.TestAdminReverse@18eed359]">verifySuccessfulRejectionOfAdminReverse</td> 
+  <td>TestNG-tests-1@1040502320</td>   <td></td> </tr>
+<tr bgcolor="67aeb6">  <td>18/10/05 12:16:30</td>   <td>69500</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAdminReverse.verifyThatRejectedReverseCanBeReversedAndConfirmedAgain()[pri:0, instance:Tests.Smoke.EmoneyManagement.TestAdminReverse@18eed359]">verifyThatRejectedReverseCanBeReversedAndConfirmedAgain</td> 
+  <td>TestNG-tests-1@1040502320</td>   <td></td> </tr>
+<tr bgcolor="968ab9">  <td>18/10/05 12:16:41</td>   <td>81015</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAdminTransfer.verifyThatBothSourceAndDestinationCannotBeMerchant()[pri:0, instance:Tests.Smoke.EmoneyManagement.TestAdminTransfer@520a3426]">verifyThatBothSourceAndDestinationCannotBeMerchant</td> 
+  <td>TestNG-tests-1@1040502320</td>   <td></td> </tr>
+<tr bgcolor="968ab9">  <td>18/10/05 12:16:43</td>   <td>82770</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAdminTransfer.verifyThatSourceAndDestinationCannotBeEqual()[pri:0, instance:Tests.Smoke.EmoneyManagement.TestAdminTransfer@520a3426]">verifyThatSourceAndDestinationCannotBeEqual</td> 
+  <td>TestNG-tests-1@1040502320</td>   <td></td> </tr>
+<tr bgcolor="968ab9">  <td>18/10/05 12:16:44</td>   <td>83456</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAdminTransfer.verifyThatAdminTransferCanBeApproved()[pri:0, instance:Tests.Smoke.EmoneyManagement.TestAdminTransfer@520a3426]">verifyThatAdminTransferCanBeApproved</td> 
+  <td>TestNG-tests-1@1040502320</td>   <td></td> </tr>
+<tr bgcolor="7cd7a0">  <td>18/10/05 12:16:56</td>   <td>95312</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestServiceBulkCreation.verifyCreationOfP2PPrepaidService()[pri:0, instance:Tests.Smoke.Services.TestServiceBulkCreation@3e9b1010]">verifyCreationOfP2PPrepaidService</td> 
+  <td>TestNG-tests-1@1040502320</td>   <td></td> </tr>
 </table>
